--- a/css/base.css
+++ b/css/base.css
@@ -26,7 +26,7 @@ input,select,textarea,button{font-family:inherit;}
 a{text-decoration:none;color:#000;}
 a:hover{text-decoration:none;}
 /*去除点击高亮效果*/
-a,button,input,select,img,label{-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;outline:medium none;}
+a,button,input,select,img,label,div{-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;outline:medium none;}
 input::-moz-focus-inner{border:none;padding:0;}
 select, input{vertical-align:middle;}
 /*去掉苹果的默认UI来渲染按钮*/
@@ -108,11 +108,11 @@ html,body{-webkit-touch-callout:none;}
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+   align-items: center;
 }
 .share {
   position: relative;
